--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
     <!-- Add your site or application content here -->
     <div class="header-blog">
-      <div class="navbar navbar-fixed-top" role="navigation">
+      <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
