--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/placeholder.css">
     <link href='https://fonts.googleapis.com/css?family=Qwigley' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
@@ -23,43 +24,44 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header-blog">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+    <div class="blog-wrapper">
+      <div class="blog-header">
+        <div class="navbar navbar-default" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
 
-            <a class="navbar-brand" href="#/">Trail and Cook</a>
-          </div>
+              <a class="navbar-brand" href="#/">Trail and Cook</a>
+            </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+            <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/main">Home</a></li>
-              <li class="blog"><a ng-href="#/blog">Blog</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#/main">Home</a></li>
+                <li class="blog"><a ng-href="#/blog">Blog</a></li>
+                <li><a ng-href="#/about">About</a></li>
+                <li><a ng-href="#/">Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-    fa
+      <div class="blog-main">
+        <div ng-view=""></div>
 
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
+         <div class="blog-footer">
+          <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
+        </div>
       </div>
+
+
     </div>
 
 
@@ -85,6 +87,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
 
     
@@ -95,6 +98,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/blog.js"></script>
+        <script src="scripts/services/http_blog.js"></script>
         <!-- endbuild -->
 </body>
 </html>
