--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="styles/placeholder.css">
     <link href='https://fonts.googleapis.com/css?family=Qwigley' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
   </head>
-  <body ng-app="cookingBlog">
+  <body ng-app="cookingBlog" ng-controller="MainCtrl">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -26,8 +27,7 @@
     <!-- Add your site or application content here -->
     <div class="blog-wrapper">
       <div class="blog-header">
-        <div class="navbar navbar-default" role="navigation">
-          <div class="container">
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="navbar-header">
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -42,25 +42,30 @@
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#/main">Home</a></li>
-                <li class="blog"><a ng-href="#/blog">Blog</a></li>
-                <li><a ng-href="#/about">About</a></li>
-                <li><a ng-href="#/">Contact</a></li>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="" ng-click="toTop()" >Home</a></li>
+                <li><a href="" ng-click="toAbout()">About</a></li>
               </ul>
             </div>
-          </div>
         </div>
       </div>
 
       <div class="blog-main">
-        <div ng-view=""></div>
+        <div ng-view="" id="Top"></div>
+
+        <div class="blog-about" id="About">
+          <h4>About me</h4>
+          <p>Can't think of a good introduction for now, gotta make it sound cool and stuff ..</p>
+          <p>For now this is just a place where I will blab about random cooking things I counter day to day</p>
+          <p>By the way I go to Waterloo so if you see me on campus or something, say hi!</p>
+          <p> Alex </p>
+        </div>
 
          <div class="blog-footer">
           <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
         </div>
-      </div>
 
+      </div>
 
     </div>
 
