--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
 
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="" ng-click="toTop()" >Home</a></li>
+                <li><a href="" >Blog</a> </li>
                 <li><a href="" ng-click="toAbout()">About</a></li>
               </ul>
             </div>
@@ -61,9 +62,9 @@
           <p> Alex </p>
         </div>
 
-         <div class="blog-footer">
+        <!--  <div class="blog-footer">
           <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
-        </div>
+        </div> -->
 
       </div>
 
