--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <!-- Add your site or application content here -->
     <div class="blog-wrapper">
       <div class="blog-header">
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation" scrollnav ng-class="{'scrollednavbar':boolChangeClass}">
             <div class="navbar-header">
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -42,7 +42,7 @@
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-              <ul class="nav navbar-nav navbar-right">
+              <ul class="nav navbar-nav" ng-class="{'navbar-right': navbarNavRight}">
                 <li><a href="" ng-click="toTop()" >Home</a></li>
                 <li><a href="" >Blog</a> </li>
                 <li><a href="" ng-click="toAbout()">About</a></li>
@@ -104,6 +104,7 @@
         <script src="scripts/services/http_blog.js"></script>
         <script src="scripts/services/http_admin.js"></script>
         <script src="scripts/services/time.js"></script>
+        <script src="scripts/directives/scrollnav.js"></script>
         <!-- endbuild -->
 </body>
 </html>
