--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/placeholder.css">
+    <link rel="stylesheet" href="styles/animate.css">
     <link href='https://fonts.googleapis.com/css?family=Qwigley' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
@@ -27,7 +28,7 @@
     <!-- Add your site or application content here -->
     <div class="blog-wrapper">
       <div class="blog-header">
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation" scrollnav ng-class="{'scrollednavbar':boolChangeClass}">
+        <div class="navbar navbar-default navbar-fixed-top fadeIn wow" data-wow-delay="0.5s" role="navigation" ng-class="{'scrollednavbar':boolChangeClass}">
             <div class="navbar-header">
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -37,12 +38,12 @@
                 <span class="icon-bar"></span>
               </button>
 
-              <a class="navbar-brand" href="#/">Trail and Cook</a>
+              <a class="navbar-brand navbar-left" href="#/">Trail and Cook</a>
             </div>
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-              <ul class="nav navbar-nav" ng-class="{'navbar-right': navbarNavRight}">
+              <ul class="nav navbar-nav navbar-right">
                 <li><a href="" ng-click="toTop()" >Home</a></li>
                 <li><a href="" >Blog</a> </li>
                 <li><a href="" ng-click="toAbout()">About</a></li>
@@ -52,7 +53,6 @@
       </div>
 
       <div class="blog-main" ui-view>
-        <div id="Top"></div>
 
         <!--  <div class="blog-footer">
           <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
@@ -90,6 +90,7 @@
     <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/tinymce-dist/tinymce.js"></script>
     <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
+    <script src="bower_components/wow/dist/wow.js"></script>
     <!-- endbower -->
 
     
@@ -105,6 +106,7 @@
         <script src="scripts/services/http_admin.js"></script>
         <script src="scripts/services/time.js"></script>
         <script src="scripts/directives/scrollnav.js"></script>
+        <script src="scripts/directives/windowsize.js"></script>
         <!-- endbuild -->
 </body>
 </html>
