--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <!-- Add your site or application content here -->
     <div class="blog-wrapper">
       <div class="blog-header">
-        <div class="navbar navbar-default navbar-fixed-top fadeIn wow" data-wow-delay="0.5s" role="navigation" ng-class="{'scrollednavbar':boolChangeClass}">
+        <div class="navbar navbar-default navbar-fixed-top fadeIn wow" data-wow-delay="0.5s" role="navigation" scrollnav ng-class="{'atblog':scrolledToBlog}">
             <div class="navbar-header">
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -44,15 +44,19 @@
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="" ng-click="toTop()" >Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="" >Blog</a> </li>
-                <li><a href="" ng-click="toAbout()">About</a></li>
+                <li><a href="">About</a></li>
               </ul>
             </div>
         </div>
       </div>
 
-      <div class="blog-main" ui-view>
+      <div class="blog-top"> 
+        <img class="featured-blog-picture" windowsize ng-style="{'height':w_height}" src="https://s3-us-west-2.amazonaws.com/trailandcook-images/2016-02-01-01.jpg">
+      </div>
+
+      <div class="blog-main" windowsize ng-style="{'padding-top':w_height}" ui-view >
 
         <!--  <div class="blog-footer">
           <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
