add comment endpoint

--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
         <script src="scripts/services/time.js"></script>
         <script src="scripts/directives/scrollnav.js"></script>
         <script src="scripts/directives/windowsize.js"></script>
+        <script src="scripts/services/http_comments.js"></script>
         <!-- endbuild -->
 </body>
 </html>
