--- a/app/index.html
+++ b/app/index.html
@@ -29,46 +29,47 @@
 
     <!-- Add your site or application content here -->
     <div class="blog-wrapper">
-      <div class="blog-header">
-        <div class="navbar navbar-default navbar-fixed-top fadeIn wow" data-wow-delay="0.5s" role="navigation" scrollnav ng-class="{'atblog':scrolledToBlog}">
-            <div class="navbar-header">
 
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
+      <div class="blog-header fadeIn wow" data-wow-delay="0.5s" windowsize ng-style="{'min-width':'300px'}">
 
-              <a class="navbar-brand navbar-left" href="#/">Trail and Cook</a>
+          <div class="blog-nav-title-container">
+            <a class="blog-nav-title" href="#/">Trail and Cook</a>
+          </div>
+
+           <div class="blog-about">
+              <p class="about-me">About</p>
+              <img class="profile-pic" src="https://s3-us-west-2.amazonaws.com/trailandcook-images/profile.jpg">
+              <div class="about-text">
+                <p>Welcome to Alex's cooking blog ~</p>
+              </div>
             </div>
 
-            <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Home</a></li>
-                <li><a href="" >Blog</a> </li>
-                <li><a href="">About</a></li>
+              <ul class="nav navbar-stacked" id="main-menu">
+                <li><a ui-sref="home">Home</a></li>
+                <li><a href="#dates" data-toggle="collapse"  data-parent="#main-menu">Blog</a> </li>
+                <div class="collapse" id="dates" >
+                  <ul>
+                    <li><a ui-sref="blog({blogmonth: '2016-02'})">2016 Feb</a></li>
+                    <li><a ui-sref="blog({blogmonth: '2016-01'})">2016 Jan</a></li>
+                  </ul>
+                </div>
               </ul>
-            </div>
-        </div>
+
+             
+
       </div>
 
-      <div class="blog-top"> 
+      <div ui-view>
+      </div>
+
+    <!--    <div class="blog-top"> 
         <img class="featured-blog-picture" windowsize ng-style="{'height':w_height}" src="https://s3-us-west-2.amazonaws.com/trailandcook-images/2016-02-01-01.jpg">
-        <!-- <video autoplay loop poster="polina.jpg" id="bgvid">
+        <video autoplay loop poster="polina.jpg" id="bgvid">
           <source src="polina.webm" type="video/webm">
           <source src=" https://s3-us-west-2.amazonaws.com/trailandcook-images/kitchen.mp4" type="video/mp4">
-        </video> -->
-      </div>
-
-      <div class="blog-main" windowsize ng-style="{'padding-top':w_height}" ui-view >
-
-        <!--  <div class="blog-footer">
-          <p><span class="glyphicon glyphicon-glass"></span> Alex Chen 2015</p>
-        </div> -->
-
-      </div>
+        </video>
+      </div> -->
 
     </div>
 
@@ -83,6 +84,12 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+
+    <!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Rather Be - Clean Bandit feat Jess Glynne','url':'https://s3-us-west-2.amazonaws.com/trailandcook-audio/11+-+Rather+Be+(feat.+Jess+Glynne)+-+Clean+Bandit.mp3'},{'title':'The Notorious BIG ft. Ja Rule - Old Thing Back (Matoma Remix)','url':'https://s3-us-west-2.amazonaws.com/trailandcook-audio/The_Notorious_BIG_feat._Ja_Rule_-_Old_Thing_Back_Matoma_Remix_(mp3.pm).mp3'}]}" ></script>
+<!-- SCM Music Player script end -->
+
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -111,6 +118,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/admin.js"></script>
+        <script src="scripts/controllers/adminEdit.js"></script>
+        <script src="scripts/controllers/adminPost.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/blog.js"></script>
